--- a/FinalGroupNotebook.ipynb
+++ b/FinalGroupNotebook.ipynb
@@ -686,6 +686,8 @@
     "The best neighborhood was Squirrel Hill South, with a total of 38 facilities. \n",
     "\n",
     "Alexis- My favorite neighborhood before doing this project was Shadyside, though I wasn't really surprised that Squirrel Hill South was the 'best' neighborhood in terms of how many facilities they have. I was surprised, however, with how little data there was in terms of Shadyside and what facilities they have. "
+    "\n"
+    "Evan- Before starting this project, my favorite neighborhood in Pittsburgh was the Strip District. It was unsurprising that it only barely made the top 10, since the Strip District is known for its many restaurants and shops. There really isn't that much room left for facilities. It was also unsurprising to me that Squirrel Hill won, due to its many facilities around the neighborhood."
    ]
   },
   {
